Modify routes/, package.json, swaggerLog.json, server.js, views/script.js
